# restaurants-python-vue

./: .env  README.md  docker-compose.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/backend/: settings.py
apps/frontend/: package.json  pnpm-lock.yaml
apps/frontend/src/components/: HelloWorld.vue
