[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Seth Wright <103055742+sethawright@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
psycopg = "^3.1.18"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pyright = "^1.1.351"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
